Tras hacer el ejercicio 6

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
   <title>Curriculum Vitae de Carlos Sánchez-Castro Coy</title>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
 
   <h1>Carlos Sánchez-Castro Coy</h1>
+
+  <img id="Foto" src="resources/foto.png" alt="Foto de Carlos Sánchez-Castro Coy">
 
   <p>Presentación</p><hr>
 
@@ -15,9 +20,9 @@
 
   <table>
     <tr>
-        <td><strong>Empresa</strong></td>
-        <td><strong>Lugar</strong></td>
-        <td><strong>Duración</strong></td>
+        <td class="text-center"><strong>Empresa</strong></td>
+        <td class="text-center"><strong>Lugar</strong></td>
+        <td class="text-center"><strong>Duración</strong></td>
     </tr>
     <tr>
         <td>Empresa 1</td>
@@ -39,9 +44,9 @@
 
   <table>
     <tr>
-        <td><strong>Titulación</strong></td>
-        <td><strong>Lugar</strong></td>
-        <td><strong>Duración</strong></td>
+        <td class="text-center"><strong>Titulación</strong></td>
+        <td class="text-center"><strong>Lugar</strong></td>
+        <td class="text-center"><strong>Duración</strong></td>
     </tr>
     <tr>
         <td>Título 1</td>
@@ -63,9 +68,9 @@
 
   <table>
     <tr>
-        <td><strong>Curso</strong></td>
-        <td><strong>Lugar</strong></td>
-        <td><strong>Duración</strong></td>
+        <td class="text-center"><strong>Curso</strong></td>
+        <td class="text-center"><strong>Lugar</strong></td>
+        <td class="text-center"><strong>Duración</strong></td>
     </tr>
     <tr>
         <td>Curso 1</td>
