--- a/index.html
+++ b/index.html
@@ -3,92 +3,103 @@
 <head>
   <title>Curriculum Vitae de Carlos Sánchez-Castro Coy</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Carlos Sánchez-Castro Coy">
+  <meta name="description" content="Carlos Sánchez-Castro Coy - Arquitecto">
+  <meta name="keywords" content="Carlos Sánchez-Castro Coy, Arquitecto, Arquitectura, GIS, SIG, Madrid, Albacete">
   <link rel="stylesheet" href="css/reset.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <link rel="stylesheet" href="icomoon/icomoon.css">
 </head>
 
 <body>
 
-  <h1>Carlos Sánchez-Castro Coy</h1>
+  <h1>Carlos Sánchez-Castro Coy. Arquitecto especializado en GIS
+    <span><img id="Foto" src="resources/foto.jpg" alt="Foto de Carlos Sánchez-Castro Coy"></span>
+  </h1>
+  <br>
 
-  <img id="Foto" src="resources/foto.png" alt="Foto de Carlos Sánchez-Castro Coy">
-
-  <p>Presentación</p><hr>
-
-  <h2>Experiencia profesional</h2><hr>
-
-  <table>
-    <tr>
-        <td class="text-center"><strong>Empresa</strong></td>
-        <td class="text-center"><strong>Lugar</strong></td>
-        <td class="text-center"><strong>Duración</strong></td>
-    </tr>
-    <tr>
-        <td>Empresa 1</td>
-        <td>Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
-        <td>Duración 1</td>
-    </tr>
-    <tr>
-        <td>Empresa 2</td>
-        <td>Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
-        <td>Duración 2</td>
-    </tr><tr>
-        <td>Empresa n</td>
-        <td>Lugar n <a href="www.coacm.org">Enlace n</a></td>
-        <td>Duración n</td>
-    </tr>
-</table>
-
-  <h2>Formación</h2><hr>
+  <h2>Experiencia profesional<span class="icon">&#xe903;</span></h2>
+  <br>
 
   <table>
     <tr>
-        <td class="text-center"><strong>Titulación</strong></td>
-        <td class="text-center"><strong>Lugar</strong></td>
-        <td class="text-center"><strong>Duración</strong></td>
+      <td class="text-center"><strong>Empresa</strong></td>
+      <td class="text-center"><strong>Lugar</strong></td>
+      <td class="text-center"><strong>Duración</strong></td>
     </tr>
     <tr>
-        <td>Título 1</td>
-        <td>Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
-        <td>Duración 1</td>
+      <td>Empresa 1</td>
+      <td>Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
+      <td>Duración 1</td>
     </tr>
     <tr>
-        <td>Título 2</td>
-        <td>Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
-        <td>Duración 2</td>
+      <td>Empresa 2</td>
+      <td>Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
+      <td>Duración 2</td>
     </tr><tr>
-        <td>Título n</td>
-        <td>Lugar n <a href="www.coacm.org">Enlace n</a></td>
-        <td>Duración n</td>
+      <td>Empresa n</td>
+      <td>Lugar n <a href="www.coacm.org">Enlace n</a></td>
+      <td>Duración n</td>
     </tr>
-</table>
+  </table>
+  <br>
 
-  <h2>Formación adicional</h2><hr>
+  <h2>Formación académica<span class="icon">&#xe914;</span></h2>
+  <br>
 
   <table>
     <tr>
-        <td class="text-center"><strong>Curso</strong></td>
-        <td class="text-center"><strong>Lugar</strong></td>
-        <td class="text-center"><strong>Duración</strong></td>
+      <td class="text-center"><strong>Titulación</strong></td>
+      <td class="text-center"><strong>Lugar</strong></td>
+      <td class="text-center"><strong>Duración</strong></td>
     </tr>
     <tr>
-        <td>Curso 1</td>
-        <td>Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
-        <td>Duración 1</td>
+      <td>Título 1</td>
+      <td>Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
+      <td>Duración 1</td>
     </tr>
     <tr>
-        <td>Curso 2</td>
-        <td>Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
-        <td>Duración 2</td>
+      <td>Título 2</td>
+      <td>Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
+      <td>Duración 2</td>
     </tr><tr>
-        <td>Curso n</td>
-        <td>Lugar n <a href="www.coacm.org">Enlace n</a></td>
-        <td>Duración n</td>
+      <td>Título n</td>
+      <td>Lugar n <a href="www.coacm.org">Enlace n</a></td>
+      <td>Duración n</td>
     </tr>
-</table>
+  </table>
+  <br>
 
-  <h2>Habilidades y conocimientos</h2><hr>
+  <h2>Formación complementaria<span class="icon">&#xe91a;</span></h2>
+  <br>
+
+  <table>
+    <tr>
+      <td class="text-center"><strong>Curso</strong></td>
+      <td class="text-center"><strong>Lugar</strong></td>
+      <td class="text-center"><strong>Duración</strong></td>
+    </tr>
+    <tr>
+      <td>Curso 1</td>
+      <td>Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
+      <td>Duración 1</td>
+    </tr>
+    <tr>
+      <td>Curso 2</td>
+      <td>Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
+      <td>Duración 2</td>
+    </tr><tr>
+      <td>Curso n</td>
+      <td>Lugar n <a href="www.coacm.org">Enlace n</a></td>
+      <td>Duración n</td>
+    </tr>
+  </table>
+  <br>
+
+  <h2>Habilidades y conocimientos<span class="icon">&#xe90d;</span></h2>
+  <br>
+
   <ul>
     <li><strong>CAD/3D:</strong> AutoCAD</li>
     <li><strong>GIS/SIG:</strong> ArcGIS</li>
@@ -97,19 +108,19 @@
     <li><strong>Ofimática:</strong> Office 365</li>
     <li><strong>Cálculo:</strong> CypeCAD</li>
   </ul>
-  <h2>Otros datos de interés</h2><hr>
+  <br>
+
+  <h2>Otros datos de interés<span class="icon">&#xe904;</span></h2>
   <ul>
     <li><strong>Afiliaciones profesionales:</strong> <a href="www.coacm.org">Colegio Oficial de Arquitectos de Castilla-La Mancha</a> (COACM)</li>
     <li><strong>Disponibilidad para viajar:</strong> Sí</li>
     <li><strong>Cambio de residencia:</strong> Sí</li>
     <li><strong>Licencia de conducir:</strong> B</li>
   </ul>
+  <br>
 
-  <h2>Perfiles sociales</h2><hr>
-  <p>También puedes encontrarme en:</p>
-  <ul>
-    <li><strong>Twitter</strong>: <a href="https://twitter.com/csanchezcastro">@csanchezcastro</a></li>
-  </ul>
+  <h2>Contacto<a class="icon-link" href="https://es.linkedin.com/"><span class="icon">&#xe930;</span></a><a class="icon-link" href="https://es.pinterest.com/csanchezcastro/"><span class="icon">&#xe931;</span></a><a class="icon-link" href="http://facebook.com/carlossanchezcastro"><span class="icon">&#xe92e;</span></a><a class="icon-link" href="https://twitter.com/csanchezcastro"><span class="icon">&#xe932;</span></a><a class="icon-link" href="mailto:arq.csanchezcastro@outlook.com"><span class="icon">&#xe91c;</span></a></h2>
+  <br>
 
 </body>
 </html>
