--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <img id="fotonavbar" src="resources/foto.jpg" alt="Foto de Carlos Sánchez-Castro Coy">
+        <img id="fotonavbar" src="resources/foto.png" alt="Foto de Carlos Sánchez-Castro Coy">
         <a class="navbar-brand" href="#Inicio">Carlos Sánchez-Castro Coy<br><br><small>Arquitecto especializado en GIS</small></a>
       </div>
 
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Buscar">
         </div>
         <button type="submit" class="btn btn-default">Enviar</button>
       </form>
@@ -64,78 +64,108 @@
 
 <h2 id="Experiencia">Experiencia profesional<span class="icon">&#xe903;</span></h2>
 <br>
-<table>
+<table class="table table-striped table-bordered table-hover">
   <tr>
-    <td class="text-center"><strong>Empresa</strong></td>
-    <td class="text-center"><strong>Lugar</strong></td>
-    <td class="text-center"><strong>Duración</strong></td>
+    <td class="text-center info"><strong>Empresa</strong></td>
+    <td class="text-center info"><strong>Lugar</strong></td>
+    <td class="text-center info"><strong>Duración</strong></td>
   </tr>
   <tr>
-    <td>Empresa 1</td>
-    <td>Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
-    <td>Duración 1</td>
+    <td class="text-center">Empresa 1</td>
+    <td class="text-center">Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
+    <td class="text-center">Duración 1</td>
   </tr>
   <tr>
-    <td>Empresa 2</td>
-    <td>Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
-    <td>Duración 2</td>
+    <td class="text-center">Empresa 2</td>
+    <td class="text-center">Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
+    <td class="text-center">Duración 2</td>
   </tr><tr>
-    <td>Empresa n</td>
-    <td>Lugar n <a href="www.coacm.org">Enlace n</a></td>
-    <td>Duración n</td>
+    <td class="text-center">Empresa n</td>
+    <td class="text-center">Lugar n <a href="www.coacm.org">Enlace n</a></td>
+    <td class="text-center">Duración n</td>
   </tr>
 </table>
-<br>
+
 <h2 id="FormacionAcademica">Formación académica<span class="icon">&#xe914;</span></h2>
 <br>
-<table>
+<table class="table table-striped table-bordered table-hover">
   <tr>
-    <td class="text-center"><strong>Titulación</strong></td>
-    <td class="text-center"><strong>Lugar</strong></td>
-    <td class="text-center"><strong>Duración</strong></td>
+    <td class="text-center info"><strong>Titulación</strong></td>
+    <td class="text-center info"><strong>Lugar</strong></td>
+    <td class="text-center info"><strong>Duración</strong></td>
   </tr>
   <tr>
-    <td>Título 1</td>
-    <td>Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
-    <td>Duración 1</td>
+    <td class="text-center">Título 1</td>
+    <td class="text-center">Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
+    <td class="text-center">Duración 1</td>
   </tr>
   <tr>
-    <td>Título 2</td>
-    <td>Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
-    <td>Duración 2</td>
+    <td class="text-center">Título 2</td>
+    <td class="text-center">Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
+    <td class="text-center">Duración 2</td>
   </tr><tr>
-    <td>Título n</td>
-    <td>Lugar n <a href="www.coacm.org">Enlace n</a></td>
-    <td>Duración n</td>
+    <td class="text-center">Título n</td>
+    <td class="text-center">Lugar n <a href="www.coacm.org">Enlace n</a></td>
+    <td class="text-center">Duración n</td>
   </tr>
 </table>
-<br>
+
 <h2 id="FormacionComplementaria">Formación complementaria<span class="icon">&#xe91a;</span></h2>
 <br>
-<table>
+<table class="table table-striped table-bordered table-hover">
   <tr>
-    <td class="text-center"><strong>Curso</strong></td>
-    <td class="text-center"><strong>Lugar</strong></td>
-    <td class="text-center"><strong>Duración</strong></td>
+    <td class="text-center info"><strong>Titulación</strong></td>
+    <td class="text-center info"><strong>Lugar</strong></td>
+    <td class="text-center info"><strong>Duración</strong></td>
   </tr>
   <tr>
-    <td>Curso 1</td>
-    <td>Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
-    <td>Duración 1</td>
+    <td class="text-center">Título 1</td>
+    <td class="text-center">Lugar 1 <a href="www.coacm.org">Enlace 01</a></td>
+    <td class="text-center">Duración 1</td>
   </tr>
   <tr>
-    <td>Curso 2</td>
-    <td>Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
-    <td>Duración 2</td>
+    <td class="text-center">Título 2</td>
+    <td class="text-center">Lugar 2 <a href="www.coacm.org">Enlace 02</a></td>
+    <td class="text-center">Duración 2</td>
   </tr><tr>
-    <td>Curso n</td>
-    <td>Lugar n <a href="www.coacm.org">Enlace n</a></td>
-    <td>Duración n</td>
+    <td class="text-center">Título n</td>
+    <td class="text-center">Lugar n <a href="www.coacm.org">Enlace n</a></td>
+    <td class="text-center">Duración n</td>
   </tr>
 </table>
-<br>
+
 <h2 id="Habilidades">Habilidades y conocimientos<span class="icon">&#xe90d;</span></h2>
 <br>
+<strong>CAD/3D</strong>
+<div class="progress">
+  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+    <span class="sr-only">40% Complete (success)</span>
+  </div>
+</div>
+<strong>GIS/SIG</strong>
+<div class="progress">
+  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+    <span class="sr-only">20% Complete</span>
+  </div>
+</div>
+<strong>BIM</strong>
+<div class="progress">
+  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+    <span class="sr-only">60% Complete (warning)</span>
+  </div>
+</div>
+<strong>Diseño gráfico</strong>
+<div class="progress">
+  <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+    <span class="sr-only">80% Complete (danger)</span>
+  </div>
+</div>
+<strong>Cálculo</strong>
+<div class="progress">
+  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+    <span class="sr-only">80% Complete (danger)</span>
+  </div>
+</div>
 <ul>
   <li><strong>CAD/3D:</strong> AutoCAD</li>
   <li><strong>GIS/SIG:</strong> ArcGIS</li>
@@ -144,7 +174,7 @@
   <li><strong>Ofimática:</strong> Office 365</li>
   <li><strong>Cálculo:</strong> CypeCAD</li>
 </ul>
-<br>
+
 <h2 id="Otros">Otros datos de interés<span class="icon">&#xe904;</span></h2>
 <br>
 <ul>
@@ -153,7 +183,7 @@
   <li><strong>Cambio de residencia:</strong> Sí</li>
   <li><strong>Licencia de conducir:</strong> B</li>
 </ul>
-<br>
+
 <h2 id="Contacto">Contacto<a class="icon-link" href="https://es.linkedin.com/"><span class="icon">&#xe930;</span></a>
   <a class="icon-link" href="https://es.pinterest.com/csanchezcastro/"><span class="icon">&#xe931;</span></a>
   <a class="icon-link" href="http://facebook.com/carlossanchezcastro"><span class="icon">&#xe92e;</span></a>
