--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
   <table class="table table-hover table-condensed">
     <tr>
-      <td class="col-md-3 text-center">Enero 2014 - Abril 2015</td>
+      <td class="col-md-3 text-center">Enero - Abril 2015</td>
       <td class="col-md-9 info">Trabajos en Estudio de Arquitectura</td>
     </tr>
     <tr>
