--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Menu <span class="caret"></span>
       </div>
     </div>
     <div class="item">
-      <img class="center-block" src="resources/CityEngine_02.png" alt="Creación de reglas CGA de CityEngine">
+      <img class="center-block" src="resources/Cityengine_02.png" alt="Creación de reglas CGA de CityEngine">
       <div class="carousel-caption">
         Creación de reglas CGA de CityEngine
       </div>
