Correcciones para moviles

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <li><a href="#Habilidades2">Habilidades y conocimientos</a></li>
               <li><a href="#Otros2">Otros datos de interés</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#Contacto2">Contacto</a></li>
+              <li><a href="#Contacto">Contacto</a></li>
             </ul>
           </li>
         </ul>
@@ -277,7 +277,7 @@ Menu <span class="caret"></span>
 <h2>Experiencia profesional<span class="icon-area-graph"></span>
   <a class="goup-link" href="#">
     <span class="dropup">
-      <span class="caret"></span>
+      <span class="caret hidden-xs"></span>
     </span>
   </a>
 </h2>
@@ -343,7 +343,7 @@ Menu <span class="caret"></span>
 <h2>Formación académica<span class="icon-graduation-cap"></span>
   <a class="goup-link" href="#Experiencia">
     <span class="dropup">
-      <span class="caret"></span>
+      <span class="caret hidden-xs"></span>
     </span>
   </a>
 </h2>
@@ -377,7 +377,7 @@ Menu <span class="caret"></span>
 <h2 >Formación complementaria<span class="icon-list"></span>
   <a class="goup-link" href="#FormacionAcademica">
     <span class="dropup">
-      <span class="caret"></span>
+      <span class="caret hidden-xs"></span>
     </span>
   </a>
 </h2>
@@ -621,7 +621,7 @@ Menu <span class="caret"></span>
 <h2>Habilidades y conocimientos<span class="icon-colours"></span>
   <a class="goup-link" href="#FormacionComplementaria">
     <span class="dropup">
-      <span class="caret"></span>
+      <span class="caret hidden-xs"></span>
     </span>
   </a>
 </h2>
@@ -758,7 +758,7 @@ Menu <span class="caret"></span>
 <h2>Otros datos de interés<span class="icon-attachment"></span>
   <a class="goup-link" href="#Habilidades">
     <span class="dropup">
-      <span class="caret"></span>
+      <span class="caret hidden-xs"></span>
     </span>
   </a>
 </h2>
@@ -815,7 +815,7 @@ Menu <span class="caret"></span>
   <a class="icon-link" data-toggle="modal" data-target="#myModal" href=""><span class="icon-qrcode"></span></a>
   <a class="goup-link" href="#">
     <span class="dropup">
-      <span class="caret"></span>
+      <span class="caret hidden-xs"></span>
     </span>
   </a>
 </h2>
