Mas ajustes para dispositivos móviles

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Menu <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Inicio</a></li>
-              <li><a href="#Experiencia2">Experiencia profesional</a></li>
-              <li><a href="#FormacionAcademica2">Formación académica</a></li>
-              <li><a href="#FormacionComplementaria2">Formación complementaria</a></li>
-              <li><a href="#Habilidades2">Habilidades y conocimientos</a></li>
-              <li><a href="#Otros2">Otros datos de interés</a></li>
+              <li><a href="#Experiencia">Experiencia profesional</a></li>
+              <li><a href="#FormacionAcademica">Formación académica</a></li>
+              <li><a href="#FormacionComplementaria">Formación complementaria</a></li>
+              <li><a href="#Habilidades">Habilidades y conocimientos</a></li>
+              <li><a href="#Otros">Otros datos de interés</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#Contacto">Contacto</a></li>
             </ul>
@@ -272,8 +272,7 @@ Menu <span class="caret"></span>
 </div>
 </div>-->
 
-<a class="anchor hidden-xs" id="Experiencia"></a>
-<a class="anchor2 hidden-sm hidden-md hidden-lg" id="Experiencia2"></a>
+<a class="anchor" id="Experiencia"></a>
 <h2>Experiencia profesional<span class="icon-area-graph"></span>
   <a class="goup-link" href="#">
     <span class="dropup">
@@ -338,8 +337,7 @@ Menu <span class="caret"></span>
 </div>
 </div>-->
 
-<a class="anchor hidden-xs" id="FormacionAcademica"></a>
-<a class="anchor2 hidden-sm hidden-md hidden-lg" id="FormacionAcademica2"></a>
+<a class="anchor" id="FormacionAcademica"></a>
 <h2>Formación académica<span class="icon-graduation-cap"></span>
   <a class="goup-link" href="#Experiencia">
     <span class="dropup">
@@ -372,8 +370,7 @@ Menu <span class="caret"></span>
 </div>
 </div>-->
 
-<a class="anchor hidden-xs" id="FormacionComplementaria"></a>
-<a class="anchor2 hidden-sm hidden-md hidden-lg" id="FormacionComplementaria2"></a>
+<a class="anchor" id="FormacionComplementaria"></a>
 <h2 >Formación complementaria<span class="icon-list"></span>
   <a class="goup-link" href="#FormacionAcademica">
     <span class="dropup">
@@ -400,7 +397,7 @@ Menu <span class="caret"></span>
 <table class="table table-hover table-condensed">
   <tr>
     <td class="col-md-3 text-center">Actualmente</td>
-    <td class="col-xs-9 col-md-9 info"><strong>Máster en Sistemas de Información Geográfica aplicados a la Ordenación del Territorio, el Urbanismo y el Paisaje</strong></td>
+    <td class="col-xs-9 col-md-9 info">Máster en Sistemas de Información Geográfica aplicados a la Ordenación del Territorio, el Urbanismo y el Paisaje</td>
   </tr>
   <tr>
     <td class="col-md-3"><span class="icon-location-pin"></span></td>
@@ -616,8 +613,7 @@ Menu <span class="caret"></span>
 </div>
 </div>-->
 
-<a class="anchor hidden-xs" id="Habilidades"></a>
-<a class="anchor2 hidden-sm hidden-md hidden-lg" id="Habilidades2"></a>
+<a class="anchor" id="Habilidades"></a>
 <h2>Habilidades y conocimientos<span class="icon-colours"></span>
   <a class="goup-link" href="#FormacionComplementaria">
     <span class="dropup">
@@ -685,7 +681,7 @@ Menu <span class="caret"></span>
       </div>
     </div>
     <div class="progress">
-      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 25%">
+      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
         <span class="text-progress-bar">CityEngine</span>
       </div>
     </div>
@@ -753,8 +749,7 @@ Menu <span class="caret"></span>
 </div>
 </div>-->
 
-<a class="anchor hidden-xs" id="Otros"></a>
-<a class="anchor2 hidden-sm hidden-md hidden-lg" id="Otros2"></a>
+<a class="anchor" id="Otros"></a>
 <h2>Otros datos de interés<span class="icon-attachment"></span>
   <a class="goup-link" href="#Habilidades">
     <span class="dropup">
@@ -793,8 +788,8 @@ Menu <span class="caret"></span>
     <span class="icon-star"></span><strong> Aficiones</strong><br>
     <img id="aficiones" src="resources/aficiones.svg" alt="Aficiones de Carlos Sánchez-Castro Coy">
   </div>
+  <br>
 </div>
-<br>
 
 <!--<div>
 <h2 id="Contacto">Contacto</h2>
@@ -830,7 +825,11 @@ Menu <span class="caret"></span>
       </div>
       <div class="modal-body">
         <div class="row">
-          <div class="col-md-4"><img id="QR" src="resources/QR.png" alt="Código QR con datos de contacto"></div>
+          <div class="col-md-4">
+            <div class="text-center">
+              <img id="QR" src="resources/QR.png" alt="Código QR con datos de contacto">
+            </div>
+          </div>
           <div class="col-md-8">Escanee el código QR con la cámara de su teléfono para obtener los datos de contacto en formato vCard. Puede utilizar una aplicación como Scanbot:</div>
           <div class="text-center">
             <a target="_blank" href="https://scanbot.io/en/index.html"><img class="appicon" src="resources/Scanbot.png" alt="Icono de Scanbot"></a>
@@ -850,12 +849,12 @@ Menu <span class="caret"></span>
   <div class="row">
     <div class="col-md-4 col-md-offset-4 text-center">
       <p>
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://csanchezcastro.github.io/">
+        <a target="_blank" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fcsanchezcastro.github.io">
           <img style="border:0;width:88px;height:31px;"
-          src="http://jigsaw.w3.org/css-validator/images/vcss"
-          alt="¡CSS Válido!" />
+          src="https://www.w3.org/Icons/valid-html401-blue"
+          alt="¡HTML Válido!" />
         </a>
-        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://csanchezcastro.github.io/">
+        <a target="_blank" href="http://jigsaw.w3.org/css-validator/validator?uri=https://csanchezcastro.github.io/">
           <img style="border:0;width:88px;height:31px;"
           src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
           alt="¡CSS Válido!" />
